updated webhook security to use handshake token

--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,6 @@ YOUTUBE_API_KEY=YOUR_YOUTUBE_API_KEY
 BLUESKY_USERNAME=YOUR_BLUESKY_USERNAME
 BLUESKY_PASSWORD=YOUR_BLUESKY_PASSWORD
 
-# Target Socials
-NIMI_CHANNEL_ID=TARGET_YOUTUBE_CHANNEL_ID
-NIMI_PLAYLIST_ID=TARGET_YOUTUBE_PLAYLIST_ID
+PUBLIC_WEBHOOK_IP=0.0.0.0:0000
+WEBHOK_TOKEN=YOUR_WEBHOOK_TOKEN
 
-NIMI_BLUESKY_ID=TARGET_BLUESKY_ID
