--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ YOUTUBE_API_KEY=YOUR_YOUTUBE_API_KEY
 # Bluesky API
 BLUESKY_USERNAME=YOUR_BLUESKY_USERNAME
 BLUESKY_PASSWORD=YOUR_BLUESKY_PASSWORD
+
+# Twitch API
+TWITCH_CLIENT_ID=YOUR_TWITCH_CLIENT_ID
+TWITCH_CLIENT_SECRET=YOUR_TWITCH_CLIENT_SECRET
